# roundtrip-example

./: Cargo.toml
roundtrip-data/: Cargo.toml  build.rs
roundtrip-data/src/: lib.rs
src/: main.rs
