[package]
name = "roundtrip-example"
version = "0.1.0"
authors = ["Sojan James <sojan.james@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#roundtrip-data = {path = "./roundtrip-data", features=["rust_codegen"]}
#cyclonedds-rs = {git = "https://github.com/sjames/cyclonedds-rs.git"}
#dds_derive = {git = "https://github.com/sjames/cyclonedds-rs.git"}
cyclonedds-rs = {path = "../cyclonedds-rs"}
dds_derive = {path = "../cyclonedds-rs/dds_derive"}
serde = "1.0.126"
serde_derive = "1.0.126"
cdr = "0.2.4"